# NYS-Greene-County-Parcel-Viewer

./: CONTRIBUTING.md  Dockerfile  IMPROVEMENTS.md  LICENSE  Makefile  README.md  app.py  constants.py  data_loader.py  docker-compose.yml  greene_county_fetcher.py  nys_data_fetcher.py  pyproject.toml  requirements-dev.txt  setup.py  ui.py
data/: zip_12450_parcels.json
docs/: README.md  README_ADDITIONS.md
pages/: 1_📊_Analytics.py  2_👤_Owner_Lookup.py  3_📥_Download_Data.py  4_🔧_Data_Management.py
tests/: __init__.py  conftest.py  test_app.py  test_fetcher.py
utils/: __init__.py  cache.py  config.py  logger.py
