# pyproject.toml - Modern Python project configuration
# https://pip.pypa.io/en/stable/reference/build-system/pyproject-toml/

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "greene-county-property-finder"
version = "1.0.0"
description = "OnXHunt-style property identification for Greene County, NY"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Victor K Jung"}
]
keywords = [
    "streamlit",
    "property",
    "real-estate",
    "gis",
    "mapping",
    "greene-county",
    "catskills",
    "new-york",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Streamlit",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
]
dependencies = [
    "streamlit>=1.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "folium>=0.15.0",
    "streamlit-folium>=0.18.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "requests>=2.31.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/victorkjung/NYS-Greene-County-Property-Search"
Documentation = "https://github.com/victorkjung/NYS-Greene-County-Property-Search#readme"
Repository = "https://github.com/victorkjung/NYS-Greene-County-Property-Search.git"
Issues = "https://github.com/victorkjung/NYS-Greene-County-Property-Search/issues"

[project.scripts]
fetch-parcels = "greene_county_fetcher:main"

# =============================================================================
# Tool Configuration
# =============================================================================

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["app", "greene_county_fetcher", "data_loader", "utils"]
skip = [".git", ".venv", "venv", "__pycache__"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "tests",
]

[[tool.mypy.overrides]]
module = "streamlit.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "folium.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "streamlit_folium.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require API access",
    "unit: marks unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "venv/*",
    ".venv/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.flake8]
max-line-length = 120
extend-ignore = ["E501", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "venv",
    ".venv",
    "build",
    "dist",
]
per-file-ignores = [
    "__init__.py:F401",
]
